FAI-3061 - update models from merge
